# CppGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  a.out  capp  crun  docker  game  memo  test.cpp  winbuild
.devcontainer/: docker  (+3 more)
engine/: CMakeLists.txt
engine/UI/: Font.cpp  Font.h  HUD.cpp  HUD.h  PauseMenu.cpp  PauseMenu.h  UIScreen.cpp  UIScreen.h
engine/audio/: AudioComponent.cpp  AudioComponent.h  AudioSystem.cpp  AudioSystem.h  SoundBank.h  SoundEvent.h  SoundHandler.cpp  SoundHandler.h
engine/audio/api/OpenAL/: Bank.cpp  Bank.h  Event.h  EventInstance.cpp  EventInstance.h  Handler.cpp  Handler.h  Helper.h  System.cpp  System.h
engine/camera/: CameraComponent.cpp  CameraComponent.h  FPSActor.cpp  FPSActor.h  FPSComponent.cpp  FPSComponent.h
engine/core/: Actor.cpp  Actor.h  CircleComponent.h  Component.h  Game.cpp  Game.h  InputComponent.cpp  InputComponent.h  LevelLoader.cpp  Math.h  MoveComponent.cpp  MoveComponent.h  Random.cpp
engine/demo/: AlreadyHaveWoodUI.h  BackDome.cpp  BackDome.h  Bonfire.cpp  Bonfire.h  BonfireGameManager.cpp  BonfireGameManager.h  BonfireGameManger.h  BonfirePlayer.cpp  BonfirePlayer.h  ContextComponent.h  Coroutine.cpp  Coroutine.h  Floor.cpp  GameOverUI.cpp  GameOverUI.h  HaveWoodUI.h  PauseMenu.cpp  Title.cpp  Title.h  Wood.cpp  WoodGenerator.cpp  WoodGenerator.h
engine/demo/UI/: AddWoodUI.h  AlreadyHaveWoodUI.h
engine/demo/Utility/: ContextComponent.h
engine/include/: Engine.h
engine/include/UI/: UIComponent.h  UIManager.h  UISystem.h
engine/include/UI/OpenGL/: Font.h
engine/include/audio/: AudioComponent.h  AudioComponentBase.h  AudioSystem.h  AudioSystemBase.h
engine/include/audio/OpenAL/: AudioComponent.h  SoundHandler.h  System.h
engine/include/audio/base/: AudioComponentBase.h  AudioSystemBase.h
engine/include/core/: Actor.h  ActorsSystem.h  Component.h  Game.h  GameBase.h
engine/include/core/base/: CoreBase.h  GameBase.h
engine/include/game/: Game.h  Game.inl  GameCore.h  GameTemp.h  StateManager.h
engine/include/game/UI/: UIScreen.h  UISystem.h
engine/include/game/audio/: AudioComponent.h  SoundHandler.h
engine/include/game/base/: GameBase.h  IGame.h
engine/include/game/camera/: CameraComponent.h  FPSActor.h  FPSComponent.h
engine/include/game/object/: Actor.h  ActorsSystem.h
engine/include/game/physics/: PhysWorld.h
engine/include/game/scene/: ActorFactory.h  ActorQuery.h  Scene.h  SceneManager.h
engine/include/input/: InputComponent.h  InputComponentBase.h  InputState.h  InputSystem.h  InputSystemBase.h
engine/include/input/Joycon/: InputSystem.h
engine/include/input/KeyboardAndMouse/: InputComponent.h  InputState.h  InputSystem.h  KeyboardState.h  MouseState.h
engine/include/input/base/: IInputSystem.h  InputComponentBase.h  InputSystemBase.h
engine/include/object/: Actor.h  ActorsSystem.h  ObjectsSystemBase.h
engine/include/renderer/: AnimMeshComponent.h  DrawComponentBase.h  MeshComponent.h  RenderDB.h  RenderData.h  Renderer.h  RendererBase.h  SkydomeComponent.h  SpriteComponent.h
engine/include/renderer/OpenGL/: AnimMeshComponent.h  Mesh.h  MeshComponent.h  Renderer.h  Shader.h  SkydomeComponent.h  SpriteComponent.h  Texture.h  VertexArray.h
engine/include/renderer/base/: DrawComponentBase.h  IRenderer.h  RenderDataBase.h  RendererBase.h
engine/include/runtime/: RuntimeData.h  RuntimeSystem.h
engine/include/runtime/base/: IRuntimeSystem.h  IRuntimeSystemBase.h  MetricsBase.h  RuntimeSystemBase.h
engine/input/: InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h  KeyboardState.cpp  KeyboardState.h  MouseState.cpp  MouseState.h
engine/physics/: BoxComponent.cpp  Collision.cpp  Collision.h  PhysWorld.cpp  PhysWorld.h
engine/render/: AnimMeshComponent.cpp  AnimMeshComponent.h  FrameBuffer.cpp  FrameBuffer.h  Light.h  Mesh.h  MeshComponent.cpp  MeshComponent.h  RenderPath.cpp  RenderPath.h  Renderer.cpp  Renderer.h  Skydome.h  SkydomeComponent.cpp  SkydomeComponent.h  SpriteComponent.cpp  SpriteComponent.h  Texture.cpp  Texture.h
engine/src/: Engine.cpp
engine/src/UI/: Font.cpp  UIScreen.cpp
engine/src/UI/OpenGL/: Font.cpp
engine/src/audio/: AudioComponent.cpp  AudioSystem.cpp  Bank.cpp  Event.cpp  EventInstance.cpp  SoundHandler.cpp
engine/src/audio/OpenAL/: AudioComponent.cpp  Bank.cpp  Event.cpp  EventInstance.cpp  SoundHandler.cpp  System.cpp
engine/src/core/: Actor.cpp  ActorsSystem.cpp  Component.cpp  Game.cpp  GameBase.cpp  LevelLoader.cpp  temp.cpp
engine/src/core/base/: GameBase.cpp
engine/src/game/: Game.cpp  GameCore.cpp
engine/src/game/UI/: UIScreen.cpp  UISystem.cpp
engine/src/game/audio/: AudioComponent.cpp  AudioSystem.cpp
engine/src/game/camera/: CameraComponent.cpp  FPSActor.cpp  FPSComponent.cpp
engine/src/game/object/: Actor.cpp  ActorsSystem.cpp  MoveComponent.cpp
engine/src/input/: InputState.cpp  InputSystem.cpp  KeyboardState.cpp
engine/src/object/: Actor.cpp  ActorsSystem.cpp  Component.cpp
engine/src/renderer/: RenderDB.cpp  Renderer.cpp  RenererBase.cpp
engine/src/runtime/: RuntimeSystem.cpp
engine/test/: AudioTestActor.h  BonfireTestActor.h  FPSTestActor.h  MouseTestActor.h  PostEffectTestActor.h  SkydomeTestActor.h  TestActor.h
engine_temp/: CMakeLists.txt
engine_temp/UI/: Font.h  UIScreen.cpp  UIScreen.h
engine_temp/audio/: AudioSystem.h
engine_temp/camera/: CameraComponent.cpp  CameraComponent.h  FPSActor.cpp  FPSComponent.cpp  FPSComponent.h
engine_temp/core/: Actor.cpp  Actor.h  Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h  Math.cpp  MoveComponent.h  Random.cpp
engine_temp/demo/: BonfireGameManager.cpp
engine_temp/demo/UI/: AlreadyHaveWoodUI.h
engine_temp/input/: Input2DComponent.cpp  Input2DComponent.h
engine_temp/physics/: Collision.cpp  PhysWorld.cpp  PhysWorld.h
engine_temp/render/: AnimMeshComponent.cpp  MeshComponent.h  Renderer.cpp  Renderer.h  Shader.h  SkydomeComponent.h  SpriteComponent.cpp
engine_temp/test/: BonfireTestActor.h  KeyboardTestActor.h  MouseTestActor.h  util.h
test/: CMakeLists.txt  TestActor.h  test.cpp
(+145 files in other folders)
